2009-12-17  Nick Clifton  <nickc@redhat.com>

	PR binutils/10924
	* config/tc-arm.c (do_ldstv4): Do not allow r15 as the destination
	register.
	(do_mrs): Likewise.
	(do_mul): Likewise.
	
2009-12-16  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (process_suffix): Set i.suffix to 0 in
	Intel syntax if size is ignored and b/l/w suffixes are
	illegal.
	(check_byte_reg): Remove byteokintel check.

2009-12-16  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_vex_prefix): Replace vex0f, vex0f38,
	vex0f3a, xop08, xop09 and xop0a with vexopcode.

2009-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_modrm_byte): Check XOP2SOURCES
	instead VEX2SOURCES.

2009-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (process_operands): Check vexsources 
	instead of vex3sources.
	(build_modrm_byte): Check vexsources instead of vex2sources
	and vex3sources.

2009-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_vex_prefix): Replace vexw0/vexw1
	with vexw.
	(build_modrm_byte): Likewise.

2009-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* as.h (mempcpy): New.

	* configure.in: Check if mempcpy is declared.
	* configure: Regenerated.
	* config.in: Likewise.

2009-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_vex_prefix): Use VEX256.

2009-12-14  Yoshinori Sato  <ysato@users.sourceforge.jp>

	PR gas/11086
	* config/tc-rx.c (rx_equ): Rename 'expr' to 'expression' in order
	to avoid shadowing a global symbol of the same name.

2009-12-14  Nick Clifton  <nickc@redhat.com>

	* config/tc-microblaze.c (md_assemble): Rename 'imm' to 'immed' in
	order to avoid shadowing a global symbol of the same name.

2009-12-11  Andrew Jenner  <andrew@codesourcery.com>

	* config/tc-arm.c (arm_init_frag): Set thumb MODE_RECORDED flag for
	non-elf.
	(arm_handle_align): Re-enable assert for non-elf.

2009-12-11  Nick Clifton  <nickc@redhat.com>

	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.
	* configure: Regenerate.